--- a/first-app/src/app/app.component.html
+++ b/first-app/src/app/app.component.html
@@ -1,8 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{title}}!
-  </h1>
-  <input type="button" value="Change Title" (click)="onChangeTitleClick()"/>
-</div>
+<h1>{{title}}</h1>
+<hr>
+<app-greeter></app-greeter>
 
