--- a/first-app/src/app/calculator/calculatorTwo.component.html
+++ b/first-app/src/app/calculator/calculatorTwo.component.html
@@ -8,5 +8,5 @@
 	<option value="divide">Divide</option>
 </select>
 <input type="number" (change)="model.n2 = $event.target.valueAsNumber">
-<input type="button" value="Calculate" (click)="onCalculateClick(selectOperator.value)">
+<input type="button" value="Calculate" (click)="model[selectOperator.value]()">
 <div>{{model.result}}</div>
