--- a/first-app/src/app/calculator/calculatorTwo.component.html
+++ b/first-app/src/app/calculator/calculatorTwo.component.html
@@ -9,4 +9,4 @@
 </select>
 <input type="number" (change)="model.n2 = $event.target.valueAsNumber">
 <input type="button" value="Calculate" (click)="model[selectOperator.value]()">
-<div>{{model.result}}</div>
+<calculator-result [data]="model.result"></calculator-result>
