--- a/first-app/src/app/app.component.html
+++ b/first-app/src/app/app.component.html
@@ -1,8 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <h1>{{title}}</h1>
 <hr>
-<app-greeter></app-greeter>
+<!-- <app-greeter></app-greeter>
 <hr>
 <calculator-one></calculator-one>
 <hr>
-<calculator-two></calculator-two>
+<calculator-two></calculator-two> -->
+<app-products></app-products>
