--- a/bug-tracker-app/src/app/bugTracker/bugTracker.component.html
+++ b/bug-tracker-app/src/app/bugTracker/bugTracker.component.html
@@ -1,7 +1,7 @@
 <section class="stats">
 	<span class="closed">1</span>
 	<span> / </span>
-	<span>2</span>
+	<span>{{bugs.length}}</span>
 </section>
 <section class="sort">
 	<label for="">Order By :</label>
@@ -14,8 +14,8 @@
 </section>
 <section class="edit">
 	<label for="">Bug Name :</label>
-	<input type="text">
-	<input type="button" value="Create New">
+	<input type="text" #txtBugName>
+	<input type="button" value="Create New" (click)="onCreateNewClick(txtBugName.value)">
 </section>
 <section class="list">
 	<ol>
