--- a/bug-tracker-app/src/app/bugTracker/bugTracker.component.html
+++ b/bug-tracker-app/src/app/bugTracker/bugTracker.component.html
@@ -19,12 +19,8 @@
 </section>
 <section class="list">
 	<ol>
-		<li>
-			<span class="bugname">This is bug - 1</span>
-			<div class="datetime">[Created At]</div>
-		</li>
-		<li>
-			<span class="bugname closed">This is bug - 2</span>
+		<li *ngFor="let bug of bugs">
+			<span class="bugname">{{bug}}</span>
 			<div class="datetime">[Created At]</div>
 		</li>
 	</ol>
