--- a/bug-tracker-app/src/app/bugTracker/bugTracker.component.html
+++ b/bug-tracker-app/src/app/bugTracker/bugTracker.component.html
@@ -24,7 +24,8 @@
 				class = "bugname" 
 				(click) = "onBugNameClick(bug)"
 				[ngClass] = "{closed : bug.isClosed}"
-			>{{ bug | json }}</span>
+				title = "{{bug.name}}"
+			>{{ bug.name | trimText }}</span>
 			<div class="datetime">[Created At]</div>
 		</li>
 	</ol>
