--- a/bug-tracker-app/src/app/bugTracker/bugTracker.component.html
+++ b/bug-tracker-app/src/app/bugTracker/bugTracker.component.html
@@ -25,7 +25,7 @@
 				(click) = "onBugNameClick(bug)"
 				[ngClass] = "{closed : bug.isClosed}"
 				title = "{{bug.name}}"
-			>{{ bug.name | trimText }}</span>
+			>{{ bug.name | trimText:40 }}</span>
 			<div class="datetime">[Created At]</div>
 		</li>
 	</ol>
