use case : 7 - Sort the bugs - part - 1

--- a/bug-tracker-app/src/app/bugTracker/bugTracker.component.html
+++ b/bug-tracker-app/src/app/bugTracker/bugTracker.component.html
@@ -5,12 +5,12 @@
 </section>
 <section class="sort">
 	<label for="">Order By :</label>
-	<select>
+	<select (change)="sortBugBy = $event.target.value">
 		<option value="name">Name</option>
-		<option value="createdAt">Status</option>
+		<option value="isClosed">Status</option>
 	</select>
 	<label for="">Descending ? :</label>
-	<input type="checkbox">
+	<input type="checkbox" (change)="sortDescending = $event.target.checked">
 </section>
 <section class="edit">
 	<label for="">Bug Name :</label>
@@ -19,7 +19,7 @@
 </section>
 <section class="list">
 	<ol>
-		<li *ngFor="let bug of bugs">
+		<li *ngFor="let bug of (bugs | sort:sortBugBy:sortDescending) ">
 			<span 
 				class = "bugname" 
 				(click) = "onBugNameClick(bug)"
