--- a/bug-tracker-app/src/app/bugTracker/bugTracker.component.html
+++ b/bug-tracker-app/src/app/bugTracker/bugTracker.component.html
@@ -1,8 +1,4 @@
-<section class="stats">
-	<span class="closed">{{bugs | closedCount}}</span>
-	<span> / </span>
-	<span>{{bugs.length}}</span>
-</section>
+<bug-stats [data]="bugs"></bug-stats>
 <section class="sort">
 	<label for="">Order By :</label>
 	<select (change)="sortBugBy = $event.target.value">
