--- a/bug-tracker-app/src/app/bugTracker/bugTracker.component.html
+++ b/bug-tracker-app/src/app/bugTracker/bugTracker.component.html
@@ -8,11 +8,7 @@
 	<label for="">Descending ? :</label>
 	<input type="checkbox" (change)="sortDescending = $event.target.checked">
 </section>
-<section class="edit">
-	<label for="">Bug Name :</label>
-	<input type="text" #txtBugName>
-	<input type="button" value="Create New" (click)="onCreateNewClick(txtBugName.value)">
-</section>
+<bug-edit (bugCreated)="onNewBug($event)"></bug-edit>
 <section class="list">
 	<ol>
 		<li *ngFor="let bug of (bugs | sort:sortBugBy:sortDescending) ">
